typos and color scheme changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -65,7 +65,7 @@
             </p>
 
             <p class="about">
-                I'm always working on a project, and this site is where my coding endeavours I can show off go. And I'm
+                I'm always working on a project, so this site is where my coding endeavours I can show off go. Additionally I'm
                 thinking about adding some extra details on some of these projects.
             </p>
 
