--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,10 +1,11 @@
 body{
 /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#334557+0,304356+100 */
-background: #334557; /* Old browsers */
-background: -moz-linear-gradient(top,  #334557 0%, #304356 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #334557 0%,#304356 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #334557 0%,#304356 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#334557', endColorstr='#304356',GradientType=0 ); /* IE6-9 */
+background: #202935; /* Old browsers */
+background: -moz-linear-gradient(top,  #202935 0%, #1b222d 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #202935 0%,#1b222d 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #202935 0%,#1b222d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#202935', endColorstr='#1b222d',GradientType=0 ); /* IE6-9 */
+
 
 
 
